# stream_search

./: .gitignore  CMakeLists.txt  Dockerfile  DockerfileFrontend  docker-compose.yml  readme.md  test.sh
data/1/: input.txt  output_etalon_html.txt  output_etalon_text.txt  output_html.txt  output_text.txt
data/2/: dict.txt  input.txt  output.txt  output_etalon_html.txt  output_etalon_text.txt  output_html.txt  output_text.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
include/: abstract_tokenizer.h  highlighter.h  html_tokenizer.h  plain_tokenizer.h  trie.h
src/: empty.cpp  highlighter.cpp  html_tokenizer.cpp  main.cpp  plain_tokenizer.cpp  trie.cpp
tests_unit/: CMakeLists.txt  main.cpp  test_unit_empty.cpp  test_unit_highlighter.cpp  test_unit_html_tokenizer.cpp  test_unit_plain_tokenizer.cpp  test_unit_trie.cpp
